telemetry-grafana/base/grafana-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 3
  selector:
    app: grafana
    deploymentconfig: grafana
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 30%
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: grafana
        deploymentconfig: grafana
    spec:
      containers:
        - name: dashboard-discovery
          image: quay.io/app-sre/k8s-sidecar:0.1.178
          volumeMounts:
            - name: grafana-dashboard-definitions
              mountPath: /grafana-dashboard-definitions
        - name: grafana
          args:
            - -config=/etc/grafana/grafana.ini
          image: quay.io/app-sre/grafana:6.7.4
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
            - mountPath: /etc/grafana/provisioning/dashboards
              name: grafana-dashboards
            - mountPath: /etc/grafana/provisioning/notifiers
              name: grafana-notifiers
            - mountPath: /etc/grafana
              name: grafana-config
            - mountPath: /grafana-dashboard-definitions
              name: grafana-dashboard-definitions
        - name: auth-proxy
          image: registry.redhat.io/openshift4/ose-oauth-proxy
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi
          ports:
            - containerPort: 8443
              name: web
          args:
            - '--provider=openshift'
            - '--https-address=:8443'
            - '--openshift-service-account=grafana'
            - '--upstream=http://localhost:3001'
            - '--openshift-delegate-urls={"/": {"resource": "route", "verb": "get", "name": "rhods-dashboard"}}'
            - '--tls-cert=/etc/tls/private/tls.crt'
            - '--tls-key=/etc/tls/private/tls.key'
            - '-cookie-secret-file=/etc/proxy/secrets/session_secret'
            - '-skip-auth-regex=^/metrics'
          volumeMounts:
            - mountPath: /etc/proxy/secrets
              name: grafana-proxy-secret
            - mountPath: /etc/tls/private
              name: grafana-tls-secret
      serviceAccount: grafana
      serviceAccountName: grafana
      volumes:
        - name: grafana-proxy-secret
          secret:
            secretName: grafana-proxy-config
            defaultMode: 420
        - emptyDir: {}
          name: grafana-dashboard-definitions
        - emptyDir: {}
          name: grafana-storage
        - emptyDir: {}
          name: grafana-notifiers
        - name: grafana-datasources
          secret:
            defaultMode: 420
            secretName: grafana-datasources
        - configMap:
            defaultMode: 420
            name: grafana-dashboards
          name: grafana-dashboards
        - name: grafana-config
          secret:
            defaultMode: 420
            secretName: grafana-config
        - name: grafana-tls-secret
          secret:
            defaultMode: 420
            secretName: grafana-tls
  triggers:
    - type: ConfigChange
