telemetry-grafana/base/token-refresher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
    app.kubernetes.io/version: master-2021-03-05-b34376b
  name: token-refresher
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: token-refresher
      app.kubernetes.io/name: token-refresher
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: token-refresher
        app.kubernetes.io/name: token-refresher
        app.kubernetes.io/version: master-2021-03-05-b34376b
    spec:
      containers:
        - args:
            - --log.level=debug
            - --log.format=logfmt
            - --web.listen=0.0.0.0:8080
            - --web.internal.listen=0.0.0.0:8081
            - --oidc.client-id=$(OIDC_CLIENT_ID)
            - --oidc.client-secret=$(OIDC_CLIENT_SECRET)
            - --oidc.issuer-url=$(OIDC_ISSUER_URL)
            - --url=https://rhobs.us-east-1.api.openshift.com/api/metrics/v1/telemeter
            - --scope=profile
          image: quay.io/observatorium/token-refresher:master-2023-09-20-f5e3403
          name: token-refresher
          ports:
            - containerPort: 8081
              name: internal
            - containerPort: 8080
              name: web
