telemetry-grafana/base/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus.io/scrape: "true"
    prometheus.io/joblabel: "telemetry-grafana-metrics"
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
  name: grafana
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: metrics
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: grafana
