telemetry-grafana/base/token-refresher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
    app.kubernetes.io/version: master-2021-03-05-b34376b
  name: token-refresher
spec:
  ports:
    - name: internal
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
  type: ClusterIP
