telemetry-grafana/base/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: grafana
